--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About | Your Name</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/reset.css">
 </head>
 
 <body>
 
   <header id="masthead">
-    <div class="container-fluid">
+    <div class="container">
       <a href="index.html" id="logo">Your Name</a>
       <nav>
         <a href="index.html">About</a>
@@ -21,7 +21,7 @@
     </div>
   </header>
 
-  <div id="main-container" class="container-fluid"> 
+  <div id="main-container" class="container"> 
     <section class="main-section">
       <h1>About Me</h1>
 
@@ -38,7 +38,7 @@
   </div>
 
   <footer>
-    <div class="container-fluid">
+    <div class="container">
       Copyright &copy; 
     </div>
   </footer>
