--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
         <a href=" https://rajtina.github.io/Psychic-Game/">
         <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Psychic-Game"></a>
 
-        <h3>Word Guess</h3>
+        <h3>Psychic-Game</h3>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
