--- a/portfolio.html
+++ b/portfolio.html
@@ -26,14 +26,15 @@
 
       <div class="work">
         <a href=" https://rajtina.github.io/Psychic-Game/">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Psychic-Game"></a>
-
+        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Psychic-Game">
         <h3>Psychic-Game</h3>
+      </a>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
-
-        <h3>RPG Game</h3>
+        <a href="https://rajtina.github.io/unit-4-game/">
+        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="Crystal Colector">
+        <h3>Crystal Colector</h3> 
+      </a>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
