--- a/portfolio.html
+++ b/portfolio.html
@@ -37,9 +37,10 @@
       </a>
       </div>
       <div class="work">
+          <a href="https://rajtina.github.io/TriviaGame/">
         <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
-
         <h3>Trivia Game</h3>
+        </a>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
