--- a/portfolio.html
+++ b/portfolio.html
@@ -43,14 +43,18 @@
         </a>
       </div>
       <div class="work">
+          <a href ="https://rajtina.github.io/Giphy_homeWork/">
         <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
 
-        <h3>Rutgers Info Widget</h3>
+        <h3>Giphy magic buttons</h3>
+      </a>
       </div>
       <div class="work">
+          <a href="https://rajtina.github.io/TrainHomework/">
         <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
 
-        <h3>Rock Paper Scissors</h3>
+        <h3>Train Scheduler</h3>
+        </a>
       </div>
 
     </section>
